fixed overflow styling in score bar, tile rack, and buttons. added an option that hides the 'invite player' if second player is filled in (for now, easy to switch to final player in object list by reference). added position :fixed to rabble logo container (for screen overflow)

--- a/src/webapp/App.css
+++ b/src/webapp/App.css
@@ -2,4 +2,5 @@
   text-align: center;
   /* Disables IOS double tap zoom... */
   touch-action: manipulation;
+  -webkit-tap-highlight-color: transparent;
 }
