--- a/src/webapp/features/rabble/components/ScoreDisplay.module.css
+++ b/src/webapp/features/rabble/components/ScoreDisplay.module.css
@@ -2,7 +2,7 @@
   margin: 1px auto;
   display: flex;
   justify-content: space-between;
-  width: 100%;
+  width: 99%;
   font-size: smaller;
 }
 
@@ -18,21 +18,25 @@
   overflow: hidden;
   text-overflow: ellipsis;
   font-size: 15px;
+  line-height: 1.3;
 }
 
 .nameAndScoreContainer {
   overflow: hidden;
   display: inline-block;
-  max-width: 120px;
+  max-width: 130px;
 }
 
 .nameAndScoreContainerContainer {
   text-align: left;
+  max-width: 100%;
+  box-sizing: border-box;
+  margin-right: 1rem;
 }
 
 .score {
   display: inline-block;
   max-width: 25px;
   font-size: 18px;
-  vertical-align: top;
+  vertical-align: bottom;
 }
