--- a/src/webapp/features/rabble_logo/rabbleLogo.module.css
+++ b/src/webapp/features/rabble_logo/rabbleLogo.module.css
@@ -66,12 +66,13 @@
 }
 
 .rabbleLogo__container {
-  position: absolute;
+  position: fixed;
   left: 0;
   top: 0;
   z-index: 100;
   width: 100vw;
-  height: 100vh;
+  height: 100%;
+  min-height: 100vh;
   display: grid;
   place-content: center;
   overflow: hidden;
